projects/compiler/test/typechecker/try/error_return_type_err_mismatch_generic.out
Error at %FILE_NAME%:4:22
Type mismatch
  |    val x: Int[] = try foo()
                          ^
Expected: Result<Int[], String[]>
but instead found: Result<Int[], Int[]>
