projects/compiler/test/typechecker/try/error_return_type_err_mismatch_generic.abra
func foo<T>(): Result<T[], T[]> = Ok([])

func bar(): Result<Int, String[]> {
  val x: Int[] = try foo()
  Ok(x.length)
}